logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: elastic-system
spec:
  ports:
  - name: logstash
    port: 5044
    protocol: TCP
    targetPort: 5044
  selector:
    app: logstash
  sessionAffinity: None
  type: ClusterIP
